add messestand to freeprojects

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -133,7 +133,8 @@
       "aquarell": "Aquarell",
       "tusche": "Tusche",
       "buntstifte": "Buntstifte",
-      "infografic": "Infografik"
+      "infografic": "Infografik",
+      "messe": "Messestanddesign"
     },
     "projectList": {
       "redlinkGPT": {
@@ -319,6 +320,10 @@
         "title": "Microfobius",
         "description": "Microfobius ist ein fiktiver Staat einer dystopischen Zukunft. Es ist ein totalitäerer Staat, welcher einfach von einer Person bzw. Personengruppe regiert werden kann.",
         "storyDesc": "Microfobius hat durch seinen hohen Standart an technologischen Errungenschaften mit der Zeit seine Gesellschaft immer mehr in ein technisches Zeitalter gedrängt und die Natur immer weiter verdrängt (Umweltverpestung). In dieser Gesellschaft existiert die Technologie jedoch nicht mehr für das Wohl des Einzelnen, sondern ausschließlich für einen winzig kleinen Bruchteil der Bevölkerung – die Obrigkeit innerhalb der Staatsgewalt welche auch dafür verantwortlich ist, die Republic zu führen. Dieser Umstand hat zur Folgen, dass das Leben des Einzelnen sich willenlos in eine Massengesellschaft einfügt, die für den technologischen Fortschritt arbeitet, jedoch selbst nichts dafür bekommt. Die Bevölkerung lebt also für die Arbeit und arbeiten nicht für das Leben."
+      },
+      "nintendoMessestand": {
+        "title": "Nintendo Messestand",
+        "description": ""
       }
     } 
   },
