add forgotten i18n variable on home.vue

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -18,6 +18,7 @@
     "subtitle": "Frontend-Entwicklerin & UI/UX-Designerin",
     "viewWork": "Projekte ansehen",
     "skills": "Meine Fähigkeiten",
+    "softSkillTitle": "Soft Skills",
     "skillsList": {
       "frontend": "Frontend-Entwicklung",
       "backend": "Backend-Entwicklung",
